Prácticas/Proyecto/tabla-de-simbolos/sintactico.y
%{
    #include<stdio.h>
    #include<string.h>
    #include<stdlib.h>
    #include<ctype.h>
    #include"lex.yy.c"
    
    void yyerror(const char *s);
    int yylex();
    int yywrap();
    void add(char);
    void insert_type();
    int search(char *);
    void insert_type();

    struct dataType {
        char * id_name;
        char * data_type;
        char * type;
        int line_no;
    } symbol_table[40];

    int count=0;
    int q;
    char type[10];
    extern int countn;
%}

%token VOID CHARACTER PRINTFF SCANFF INT FLOAT CHAR FOR IF ELSE TRUE FALSE NUMERO FLOAT_NUM 
%token ID MENOR_O_IGUAL MAYOR_O_IGUAL IGUALDAD DESIGUALDAD MAYOR MENOR 
%token Y O STR SUMA MULT DIV RESTA UNARIO INCLUDE RETURN 

%%

programa: cabecera funcion '(' ')' '{' cuerpo return '}'
;

cabecera: cabecera cabecera
| INCLUDE { add('H'); }
;

funcion: tipo ID { add('F'); }
;

tipo: INT { insert_type(); }
| FLOAT { insert_type(); }
| CHAR { insert_type(); }
| VOID { insert_type(); }
;

cuerpo: FOR { add('K'); } '(' declaracion ';' condicion ';' declaracion ')' '{' cuerpo '}'
| IF { add('K'); } '(' condicion ')' '{' cuerpo '}' else
| declaracion ';'
| cuerpo cuerpo 
| PRINTFF { add('K'); } '(' STR ')' ';'
| SCANFF { add('K'); } '(' STR ',' '&' ID ')' ';'
;

else: ELSE { add('K'); } '{' cuerpo '}'
|
;

condicion: valor rel valor
| TRUE { add('K'); }
| FALSE { add('K'); }
|
;

declaracion: tipo ID { add('V'); } init
| ID '=' expresion
| ID rel expresion
| ID UNARIO
| UNARIO ID
;

init: '=' valor
|
;

expresion: expresion arit expresion
| valor
;

arit: SUMA
| RESTA
| MULT
| DIV
;

rel: MENOR
| MENOR_O_IGUAL
| MAYOR
| MAYOR_O_IGUAL
| IGUALDAD
| DESIGUALDAD
| Y
| O 
;

valor: NUMERO { add('C'); }
| FLOAT_NUM { add('C'); }
| CHARACTER { add('C'); }
| ID
;

return: RETURN { add('K'); } valor ';'
|
;

%%

int main() {
        yyparse();
	printf("\nSIMBOLO | TIPO DE DATO | TIPO | LINEA\n");
	printf("_______________________________________\n\n");
	int i=0;
	for(i=0; i<count; i++) {
		printf("%s\t%s\t%s\t%d\t\n", symbol_table[i].id_name, symbol_table[i].data_type, symbol_table[i].type, symbol_table[i].line_no);
	}
	for(i=0;i<count;i++) {
		free(symbol_table[i].id_name);
		free(symbol_table[i].type);
	}
	printf("\n\n");
}

int search(char *type) {
	int i;
	for(i=count-1; i>=0; i--) {
		if(strcmp(symbol_table[i].id_name, type)==0) {
			return -1;
			break;
		}
	}
	return 0;
}

void add(char c) {
  q=search(yytext);
  if(!q) {
    if(c == 'H') {
			symbol_table[count].id_name=strdup(yytext);
			symbol_table[count].data_type=strdup(type);
			symbol_table[count].line_no=countn+1;
			symbol_table[count].type=strdup("Cabecera");
			count++;
		}
		else if(c == 'K') {
			symbol_table[count].id_name=strdup(yytext);
			symbol_table[count].data_type=strdup("N/A");
			symbol_table[count].line_no=countn+1;
			symbol_table[count].type=strdup("P. Reservada");
			count++;
		}
		else if(c == 'V') {
			symbol_table[count].id_name=strdup(yytext);
			symbol_table[count].data_type=strdup(type);
			symbol_table[count].line_no=countn+1;
			symbol_table[count].type=strdup("Variable");
			count++;
		}
		else if(c == 'C') {
			symbol_table[count].id_name=strdup(yytext);
			symbol_table[count].data_type=strdup("CONST");
			symbol_table[count].line_no=countn+1;
			symbol_table[count].type=strdup("Constante");
			count++;
		}
		else if(c == 'F') {
			symbol_table[count].id_name=strdup(yytext);
			symbol_table[count].data_type=strdup(type);
			symbol_table[count].line_no=countn+1;
			symbol_table[count].type=strdup("Funcion\t");
			count++;
		}
	}
}

void insert_type() {
	strcpy(type, yytext);
}

void yyerror(const char* msg) {
  fprintf(stderr, "%s\n", msg);
}
