Prácticas/Proyecto/tabla-de-simbolos/out/y.output
   0  $accept : programa $end

   1  programa : cabecera funcion '(' ')' '{' cuerpo return '}'

   2  cabecera : cabecera cabecera
   3           | INCLUDE

   4  funcion : tipo ID

   5  tipo : INT
   6       | FLOAT
   7       | CHAR
   8       | VOID

   9  $$1 :

  10  cuerpo : FOR $$1 '(' declaracion ';' condicion ';' declaracion ')' '{' cuerpo '}'

  11  $$2 :

  12  cuerpo : IF $$2 '(' condicion ')' '{' cuerpo '}' else
  13         | declaracion ';'
  14         | cuerpo cuerpo

  15  $$3 :

  16  cuerpo : PRINTFF $$3 '(' STR ')' ';'

  17  $$4 :

  18  cuerpo : SCANFF $$4 '(' STR ',' '&' ID ')' ';'

  19  $$5 :

  20  else : ELSE $$5 '{' cuerpo '}'
  21       |

  22  condicion : valor rel valor
  23            | TRUE
  24            | FALSE
  25            |

  26  $$6 :

  27  declaracion : tipo ID $$6 init
  28              | ID '=' expresion
  29              | ID rel expresion
  30              | ID UNARIO
  31              | UNARIO ID

  32  init : '=' valor
  33       |

  34  expresion : expresion arit expresion
  35            | valor

  36  arit : SUMA
  37       | RESTA
  38       | MULT
  39       | DIV

  40  rel : MENOR
  41      | MENOR_O_IGUAL
  42      | MAYOR
  43      | MAYOR_O_IGUAL
  44      | IGUALDAD
  45      | DESIGUALDAD
  46      | Y
  47      | O

  48  valor : NUMERO
  49        | FLOAT_NUM
  50        | CHARACTER
  51        | ID

  52  $$7 :

  53  return : RETURN $$7 valor ';'
  54         |

state 0
	$accept : . programa $end  (0)

	INCLUDE  shift 1
	.  error

	programa  goto 2
	cabecera  goto 3


state 1
	cabecera : INCLUDE .  (3)

	.  reduce 3


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : cabecera . funcion '(' ')' '{' cuerpo return '}'  (1)
	cabecera : cabecera . cabecera  (2)

	VOID  shift 4
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	INCLUDE  shift 1
	.  error

	cabecera  goto 8
	funcion  goto 9
	tipo  goto 10


state 4
	tipo : VOID .  (8)

	.  reduce 8


state 5
	tipo : INT .  (5)

	.  reduce 5


state 6
	tipo : FLOAT .  (6)

	.  reduce 6


state 7
	tipo : CHAR .  (7)

	.  reduce 7


8: shift/reduce conflict (shift 1, reduce 2) on INCLUDE
state 8
	cabecera : cabecera . cabecera  (2)
	cabecera : cabecera cabecera .  (2)

	INCLUDE  shift 1
	VOID  reduce 2
	INT  reduce 2
	FLOAT  reduce 2
	CHAR  reduce 2

	cabecera  goto 8


state 9
	programa : cabecera funcion . '(' ')' '{' cuerpo return '}'  (1)

	'('  shift 11
	.  error


state 10
	funcion : tipo . ID  (4)

	ID  shift 12
	.  error


state 11
	programa : cabecera funcion '(' . ')' '{' cuerpo return '}'  (1)

	')'  shift 13
	.  error


state 12
	funcion : tipo ID .  (4)

	.  reduce 4


state 13
	programa : cabecera funcion '(' ')' . '{' cuerpo return '}'  (1)

	'{'  shift 14
	.  error


state 14
	programa : cabecera funcion '(' ')' '{' . cuerpo return '}'  (1)

	VOID  shift 4
	PRINTFF  shift 15
	SCANFF  shift 16
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	FOR  shift 17
	IF  shift 18
	ID  shift 19
	UNARIO  shift 20
	.  error

	cuerpo  goto 21
	tipo  goto 22
	declaracion  goto 23


state 15
	cuerpo : PRINTFF . $$3 '(' STR ')' ';'  (16)
	$$3 : .  (15)

	.  reduce 15

	$$3  goto 24


state 16
	cuerpo : SCANFF . $$4 '(' STR ',' '&' ID ')' ';'  (18)
	$$4 : .  (17)

	.  reduce 17

	$$4  goto 25


state 17
	cuerpo : FOR . $$1 '(' declaracion ';' condicion ';' declaracion ')' '{' cuerpo '}'  (10)
	$$1 : .  (9)

	.  reduce 9

	$$1  goto 26


state 18
	cuerpo : IF . $$2 '(' condicion ')' '{' cuerpo '}' else  (12)
	$$2 : .  (11)

	.  reduce 11

	$$2  goto 27


state 19
	declaracion : ID . '=' expresion  (28)
	declaracion : ID . rel expresion  (29)
	declaracion : ID . UNARIO  (30)

	MENOR_O_IGUAL  shift 28
	MAYOR_O_IGUAL  shift 29
	IGUALDAD  shift 30
	DESIGUALDAD  shift 31
	MAYOR  shift 32
	MENOR  shift 33
	Y  shift 34
	O  shift 35
	UNARIO  shift 36
	'='  shift 37
	.  error

	rel  goto 38


state 20
	declaracion : UNARIO . ID  (31)

	ID  shift 39
	.  error


state 21
	programa : cabecera funcion '(' ')' '{' cuerpo . return '}'  (1)
	cuerpo : cuerpo . cuerpo  (14)
	return : .  (54)

	VOID  shift 4
	PRINTFF  shift 15
	SCANFF  shift 16
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	FOR  shift 17
	IF  shift 18
	ID  shift 19
	UNARIO  shift 20
	RETURN  shift 40
	'}'  reduce 54

	cuerpo  goto 41
	return  goto 42
	tipo  goto 22
	declaracion  goto 23


state 22
	declaracion : tipo . ID $$6 init  (27)

	ID  shift 43
	.  error


state 23
	cuerpo : declaracion . ';'  (13)

	';'  shift 44
	.  error


state 24
	cuerpo : PRINTFF $$3 . '(' STR ')' ';'  (16)

	'('  shift 45
	.  error


state 25
	cuerpo : SCANFF $$4 . '(' STR ',' '&' ID ')' ';'  (18)

	'('  shift 46
	.  error


state 26
	cuerpo : FOR $$1 . '(' declaracion ';' condicion ';' declaracion ')' '{' cuerpo '}'  (10)

	'('  shift 47
	.  error


state 27
	cuerpo : IF $$2 . '(' condicion ')' '{' cuerpo '}' else  (12)

	'('  shift 48
	.  error


state 28
	rel : MENOR_O_IGUAL .  (41)

	.  reduce 41


state 29
	rel : MAYOR_O_IGUAL .  (43)

	.  reduce 43


state 30
	rel : IGUALDAD .  (44)

	.  reduce 44


state 31
	rel : DESIGUALDAD .  (45)

	.  reduce 45


state 32
	rel : MAYOR .  (42)

	.  reduce 42


state 33
	rel : MENOR .  (40)

	.  reduce 40


state 34
	rel : Y .  (46)

	.  reduce 46


state 35
	rel : O .  (47)

	.  reduce 47


state 36
	declaracion : ID UNARIO .  (30)

	.  reduce 30


state 37
	declaracion : ID '=' . expresion  (28)

	CHARACTER  shift 49
	NUMERO  shift 50
	FLOAT_NUM  shift 51
	ID  shift 52
	.  error

	valor  goto 53
	expresion  goto 54


state 38
	declaracion : ID rel . expresion  (29)

	CHARACTER  shift 49
	NUMERO  shift 50
	FLOAT_NUM  shift 51
	ID  shift 52
	.  error

	valor  goto 53
	expresion  goto 55


state 39
	declaracion : UNARIO ID .  (31)

	.  reduce 31


state 40
	return : RETURN . $$7 valor ';'  (53)
	$$7 : .  (52)

	.  reduce 52

	$$7  goto 56


41: shift/reduce conflict (shift 4, reduce 14) on VOID
41: shift/reduce conflict (shift 15, reduce 14) on PRINTFF
41: shift/reduce conflict (shift 16, reduce 14) on SCANFF
41: shift/reduce conflict (shift 5, reduce 14) on INT
41: shift/reduce conflict (shift 6, reduce 14) on FLOAT
41: shift/reduce conflict (shift 7, reduce 14) on CHAR
41: shift/reduce conflict (shift 17, reduce 14) on FOR
41: shift/reduce conflict (shift 18, reduce 14) on IF
41: shift/reduce conflict (shift 19, reduce 14) on ID
41: shift/reduce conflict (shift 20, reduce 14) on UNARIO
state 41
	cuerpo : cuerpo . cuerpo  (14)
	cuerpo : cuerpo cuerpo .  (14)

	VOID  shift 4
	PRINTFF  shift 15
	SCANFF  shift 16
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	FOR  shift 17
	IF  shift 18
	ID  shift 19
	UNARIO  shift 20
	RETURN  reduce 14
	'}'  reduce 14

	cuerpo  goto 41
	tipo  goto 22
	declaracion  goto 23


state 42
	programa : cabecera funcion '(' ')' '{' cuerpo return . '}'  (1)

	'}'  shift 57
	.  error


state 43
	declaracion : tipo ID . $$6 init  (27)
	$$6 : .  (26)

	.  reduce 26

	$$6  goto 58


state 44
	cuerpo : declaracion ';' .  (13)

	.  reduce 13


state 45
	cuerpo : PRINTFF $$3 '(' . STR ')' ';'  (16)

	STR  shift 59
	.  error


state 46
	cuerpo : SCANFF $$4 '(' . STR ',' '&' ID ')' ';'  (18)

	STR  shift 60
	.  error


state 47
	cuerpo : FOR $$1 '(' . declaracion ';' condicion ';' declaracion ')' '{' cuerpo '}'  (10)

	VOID  shift 4
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	ID  shift 19
	UNARIO  shift 20
	.  error

	tipo  goto 22
	declaracion  goto 61


state 48
	cuerpo : IF $$2 '(' . condicion ')' '{' cuerpo '}' else  (12)
	condicion : .  (25)

	CHARACTER  shift 49
	TRUE  shift 62
	FALSE  shift 63
	NUMERO  shift 50
	FLOAT_NUM  shift 51
	ID  shift 52
	')'  reduce 25

	condicion  goto 64
	valor  goto 65


state 49
	valor : CHARACTER .  (50)

	.  reduce 50


state 50
	valor : NUMERO .  (48)

	.  reduce 48


state 51
	valor : FLOAT_NUM .  (49)

	.  reduce 49


state 52
	valor : ID .  (51)

	.  reduce 51


state 53
	expresion : valor .  (35)

	.  reduce 35


state 54
	declaracion : ID '=' expresion .  (28)
	expresion : expresion . arit expresion  (34)

	SUMA  shift 66
	MULT  shift 67
	DIV  shift 68
	RESTA  shift 69
	')'  reduce 28
	';'  reduce 28

	arit  goto 70


state 55
	declaracion : ID rel expresion .  (29)
	expresion : expresion . arit expresion  (34)

	SUMA  shift 66
	MULT  shift 67
	DIV  shift 68
	RESTA  shift 69
	')'  reduce 29
	';'  reduce 29

	arit  goto 70


state 56
	return : RETURN $$7 . valor ';'  (53)

	CHARACTER  shift 49
	NUMERO  shift 50
	FLOAT_NUM  shift 51
	ID  shift 52
	.  error

	valor  goto 71


state 57
	programa : cabecera funcion '(' ')' '{' cuerpo return '}' .  (1)

	.  reduce 1


state 58
	declaracion : tipo ID $$6 . init  (27)
	init : .  (33)

	'='  shift 72
	')'  reduce 33
	';'  reduce 33

	init  goto 73


state 59
	cuerpo : PRINTFF $$3 '(' STR . ')' ';'  (16)

	')'  shift 74
	.  error


state 60
	cuerpo : SCANFF $$4 '(' STR . ',' '&' ID ')' ';'  (18)

	','  shift 75
	.  error


state 61
	cuerpo : FOR $$1 '(' declaracion . ';' condicion ';' declaracion ')' '{' cuerpo '}'  (10)

	';'  shift 76
	.  error


state 62
	condicion : TRUE .  (23)

	.  reduce 23


state 63
	condicion : FALSE .  (24)

	.  reduce 24


state 64
	cuerpo : IF $$2 '(' condicion . ')' '{' cuerpo '}' else  (12)

	')'  shift 77
	.  error


state 65
	condicion : valor . rel valor  (22)

	MENOR_O_IGUAL  shift 28
	MAYOR_O_IGUAL  shift 29
	IGUALDAD  shift 30
	DESIGUALDAD  shift 31
	MAYOR  shift 32
	MENOR  shift 33
	Y  shift 34
	O  shift 35
	.  error

	rel  goto 78


state 66
	arit : SUMA .  (36)

	.  reduce 36


state 67
	arit : MULT .  (38)

	.  reduce 38


state 68
	arit : DIV .  (39)

	.  reduce 39


state 69
	arit : RESTA .  (37)

	.  reduce 37


state 70
	expresion : expresion arit . expresion  (34)

	CHARACTER  shift 49
	NUMERO  shift 50
	FLOAT_NUM  shift 51
	ID  shift 52
	.  error

	valor  goto 53
	expresion  goto 79


state 71
	return : RETURN $$7 valor . ';'  (53)

	';'  shift 80
	.  error


state 72
	init : '=' . valor  (32)

	CHARACTER  shift 49
	NUMERO  shift 50
	FLOAT_NUM  shift 51
	ID  shift 52
	.  error

	valor  goto 81


state 73
	declaracion : tipo ID $$6 init .  (27)

	.  reduce 27


state 74
	cuerpo : PRINTFF $$3 '(' STR ')' . ';'  (16)

	';'  shift 82
	.  error


state 75
	cuerpo : SCANFF $$4 '(' STR ',' . '&' ID ')' ';'  (18)

	'&'  shift 83
	.  error


state 76
	cuerpo : FOR $$1 '(' declaracion ';' . condicion ';' declaracion ')' '{' cuerpo '}'  (10)
	condicion : .  (25)

	CHARACTER  shift 49
	TRUE  shift 62
	FALSE  shift 63
	NUMERO  shift 50
	FLOAT_NUM  shift 51
	ID  shift 52
	';'  reduce 25

	condicion  goto 84
	valor  goto 65


state 77
	cuerpo : IF $$2 '(' condicion ')' . '{' cuerpo '}' else  (12)

	'{'  shift 85
	.  error


state 78
	condicion : valor rel . valor  (22)

	CHARACTER  shift 49
	NUMERO  shift 50
	FLOAT_NUM  shift 51
	ID  shift 52
	.  error

	valor  goto 86


79: shift/reduce conflict (shift 66, reduce 34) on SUMA
79: shift/reduce conflict (shift 67, reduce 34) on MULT
79: shift/reduce conflict (shift 68, reduce 34) on DIV
79: shift/reduce conflict (shift 69, reduce 34) on RESTA
state 79
	expresion : expresion . arit expresion  (34)
	expresion : expresion arit expresion .  (34)

	SUMA  shift 66
	MULT  shift 67
	DIV  shift 68
	RESTA  shift 69
	')'  reduce 34
	';'  reduce 34

	arit  goto 70


state 80
	return : RETURN $$7 valor ';' .  (53)

	.  reduce 53


state 81
	init : '=' valor .  (32)

	.  reduce 32


state 82
	cuerpo : PRINTFF $$3 '(' STR ')' ';' .  (16)

	.  reduce 16


state 83
	cuerpo : SCANFF $$4 '(' STR ',' '&' . ID ')' ';'  (18)

	ID  shift 87
	.  error


state 84
	cuerpo : FOR $$1 '(' declaracion ';' condicion . ';' declaracion ')' '{' cuerpo '}'  (10)

	';'  shift 88
	.  error


state 85
	cuerpo : IF $$2 '(' condicion ')' '{' . cuerpo '}' else  (12)

	VOID  shift 4
	PRINTFF  shift 15
	SCANFF  shift 16
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	FOR  shift 17
	IF  shift 18
	ID  shift 19
	UNARIO  shift 20
	.  error

	cuerpo  goto 89
	tipo  goto 22
	declaracion  goto 23


state 86
	condicion : valor rel valor .  (22)

	.  reduce 22


state 87
	cuerpo : SCANFF $$4 '(' STR ',' '&' ID . ')' ';'  (18)

	')'  shift 90
	.  error


state 88
	cuerpo : FOR $$1 '(' declaracion ';' condicion ';' . declaracion ')' '{' cuerpo '}'  (10)

	VOID  shift 4
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	ID  shift 19
	UNARIO  shift 20
	.  error

	tipo  goto 22
	declaracion  goto 91


state 89
	cuerpo : IF $$2 '(' condicion ')' '{' cuerpo . '}' else  (12)
	cuerpo : cuerpo . cuerpo  (14)

	VOID  shift 4
	PRINTFF  shift 15
	SCANFF  shift 16
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	FOR  shift 17
	IF  shift 18
	ID  shift 19
	UNARIO  shift 20
	'}'  shift 92
	.  error

	cuerpo  goto 41
	tipo  goto 22
	declaracion  goto 23


state 90
	cuerpo : SCANFF $$4 '(' STR ',' '&' ID ')' . ';'  (18)

	';'  shift 93
	.  error


state 91
	cuerpo : FOR $$1 '(' declaracion ';' condicion ';' declaracion . ')' '{' cuerpo '}'  (10)

	')'  shift 94
	.  error


state 92
	cuerpo : IF $$2 '(' condicion ')' '{' cuerpo '}' . else  (12)
	else : .  (21)

	ELSE  shift 95
	VOID  reduce 21
	PRINTFF  reduce 21
	SCANFF  reduce 21
	INT  reduce 21
	FLOAT  reduce 21
	CHAR  reduce 21
	FOR  reduce 21
	IF  reduce 21
	ID  reduce 21
	UNARIO  reduce 21
	RETURN  reduce 21
	'}'  reduce 21

	else  goto 96


state 93
	cuerpo : SCANFF $$4 '(' STR ',' '&' ID ')' ';' .  (18)

	.  reduce 18


state 94
	cuerpo : FOR $$1 '(' declaracion ';' condicion ';' declaracion ')' . '{' cuerpo '}'  (10)

	'{'  shift 97
	.  error


state 95
	else : ELSE . $$5 '{' cuerpo '}'  (20)
	$$5 : .  (19)

	.  reduce 19

	$$5  goto 98


state 96
	cuerpo : IF $$2 '(' condicion ')' '{' cuerpo '}' else .  (12)

	.  reduce 12


state 97
	cuerpo : FOR $$1 '(' declaracion ';' condicion ';' declaracion ')' '{' . cuerpo '}'  (10)

	VOID  shift 4
	PRINTFF  shift 15
	SCANFF  shift 16
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	FOR  shift 17
	IF  shift 18
	ID  shift 19
	UNARIO  shift 20
	.  error

	cuerpo  goto 99
	tipo  goto 22
	declaracion  goto 23


state 98
	else : ELSE $$5 . '{' cuerpo '}'  (20)

	'{'  shift 100
	.  error


state 99
	cuerpo : FOR $$1 '(' declaracion ';' condicion ';' declaracion ')' '{' cuerpo . '}'  (10)
	cuerpo : cuerpo . cuerpo  (14)

	VOID  shift 4
	PRINTFF  shift 15
	SCANFF  shift 16
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	FOR  shift 17
	IF  shift 18
	ID  shift 19
	UNARIO  shift 20
	'}'  shift 101
	.  error

	cuerpo  goto 41
	tipo  goto 22
	declaracion  goto 23


state 100
	else : ELSE $$5 '{' . cuerpo '}'  (20)

	VOID  shift 4
	PRINTFF  shift 15
	SCANFF  shift 16
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	FOR  shift 17
	IF  shift 18
	ID  shift 19
	UNARIO  shift 20
	.  error

	cuerpo  goto 102
	tipo  goto 22
	declaracion  goto 23


state 101
	cuerpo : FOR $$1 '(' declaracion ';' condicion ';' declaracion ')' '{' cuerpo '}' .  (10)

	.  reduce 10


state 102
	cuerpo : cuerpo . cuerpo  (14)
	else : ELSE $$5 '{' cuerpo . '}'  (20)

	VOID  shift 4
	PRINTFF  shift 15
	SCANFF  shift 16
	INT  shift 5
	FLOAT  shift 6
	CHAR  shift 7
	FOR  shift 17
	IF  shift 18
	ID  shift 19
	UNARIO  shift 20
	'}'  shift 103
	.  error

	cuerpo  goto 41
	tipo  goto 22
	declaracion  goto 23


state 103
	else : ELSE $$5 '{' cuerpo '}' .  (20)

	.  reduce 20


State 8 contains 1 shift/reduce conflict.
State 41 contains 10 shift/reduce conflicts.
State 79 contains 4 shift/reduce conflicts.


41 terminals, 22 nonterminals
55 grammar rules, 104 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  VOID
     3    258  CHARACTER
     4    259  PRINTFF
     5    260  SCANFF
     6    261  INT
     7    262  FLOAT
     8    263  CHAR
     9    264  FOR
    10    265  IF
    11    266  ELSE
    12    267  TRUE
    13    268  FALSE
    14    269  NUMERO
    15    270  FLOAT_NUM
    16    271  ID
    17    272  MENOR_O_IGUAL
    18    273  MAYOR_O_IGUAL
    19    274  IGUALDAD
    20    275  DESIGUALDAD
    21    276  MAYOR
    22    277  MENOR
    23    278  Y
    24    279  O
    25    280  STR
    26    281  SUMA
    27    282  MULT
    28    283  DIV
    29    284  RESTA
    30    285  UNARIO
    31    286  INCLUDE
    32    287  RETURN
    33     40  '('
    34     41  ')'
    35    123  '{'
    36    125  '}'
    37     59  ';'
    38     44  ','
    39     38  '&'
    40     61  '='
    41    288  $accept
    42    289  programa
    43    290  cabecera
    44    291  funcion
    45    292  cuerpo
    46    293  return
    47    294  tipo
    48    295  $$1
    49    296  declaracion
    50    297  condicion
    51    298  $$2
    52    299  else
    53    300  $$3
    54    301  $$4
    55    302  $$5
    56    303  valor
    57    304  rel
    58    305  init
    59    306  $$6
    60    307  expresion
    61    308  arit
    62    309  $$7
